common/common.scss
/* ... */
.footer-item a:hover {
  opacity: 0.8;
}
.footer-item p,
.footer-item form {
  font-family: "FontRegular", sans-serif;
  font-size: 14px;
  line-height: 3.14;
  color: #7f8198;
}
.form-button {
  margin-left: 15px;
  opacity: 0.35;
  border-radius: 3px;
  background-image: linear-gradient(72deg, #00dbe2, #01bfe3);
  color: white;
  border: solid 0px transparent;
  padding: 0 30px;
  line-height: 2.4;
  outline: none;
  cursor: pointer;
}
.form-button:hover {
  opacity: 0.8;
}
.footer-form {
  height: 43px !important;
  display: flex;
  align-items: center;
}
.form-input {
  line-height: 2;
  border-top: 0!important;
  border-left: 0!important;
  border-right: 0!important;
  border-bottom: solid 1px #d8d8d8!important;
  background: transparent;
  outline: none;
  padding-left: 0!important;
  box-shadow: none!important;
}
.footer-item-p {
  font-size: 14px;
  line-height: 3.14;
  color: rgb(127, 129, 152);
  margin: 0;
}

.footer-box {
  margin: 0 -15px;
  height: 43px;
  display: flex;
  align-items: center;
}
.footer-box a {
  display: inline;
  padding: 0 15px;
  text-decoration: none;
}
.forum {
  height: 19px;
  width: 19px;
}

#footer_links a {
  color: black;
  font-weight: bold;
  cursor: pointer;
}

#footer_links a:hover {
  color: black;
  box-shadow: black 0 -1px 0 inset;
}


@media (max-width: 745px) {
  .footer-container {
    grid-template-columns: 33% !important;
  }
  .mobile-full {
    grid-column-start: 1 !important;
    grid-column-end: 4 !important;
  }
}


// Hero
.hero {
  background: #0D131E;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  position: absolute;
  right: 0;
  top: 54px;
  height: 260px;
  overflow: hidden;
  img {
    margin-top: 83px;
    overflow: hidden;
  }
  h1 {
    display: flex;
    position: absolute;
    left: 50%;
    top: 38%;
    transform: translate(-50%);
    color: white;
    font-family: "HKGroteskLight", "HankenGroteskRegular", sans-serif;
    line-height: 40px;
    font-size: 30px;
    text-align: center;
    font-weight: 100;
  }
}

.hero-container {
  min-height: 290px;
}



@media (min-width: 780px) {
  div.hero {
    justify-content: space-around;
    top: 60px;
    h1 {
      display: block;
      font-family: "HKGroteskLight", "HankenGroteskRegular", sans-serif;
      line-height: 56px;
      font-size: 42px;
      font-weight: 100;
      color: #FFFFFF;
      transform: none;
      position: inherit;
      text-align: left;
    }
  }
}

.wrap {
  max-width: 1052px;
}

.embedded-posts .topic-avatar {
  padding-left: 0;
}
.latest-topic-list .table-heading {
  line-height: 5.5em;
}

body[class*="archetype-"] .hero-container, body[class*="archetype-"] .hero {
    display: none;
}

.extra-info-wrapper .topic-link {
  color: white;
}
.latest-topic-list {
  .badge-wrapper.bar span.badge-category {
    color: $primary;
  }
  .table-heading {
    color: $primary;
  }
  .latest-topic-list-item {
    padding: 1.5em;
    background: $highlight;
  }
  .table-heading:first-child {
    border-bottom: 0 transparent;
  }
  .latest-topic-list-item:nth-child(2) {
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
  }

  .latest-topic-list-item:nth-child(n-1)  {
    border-bottom-left-radius: 6px;
    border-bottom-right-radius: 6px;
  }
}

.more-topics {
  a {
    width: 100%
  }
}


.select-kit.combo-box.category-drop.bar.has-selection .category-drop-header {
  background: #212c47;
  padding: 20px;
  border: 0px;
  border-radius: 6px;
  box-shadow: rgba(0,0,0,0.07) 0px 4px 6px 0px;
}
.select-kit.combo-box .select-kit-row {
  padding: 18px;
}
a.title:visited:not(.badge-notification), .topic-list .anon .main-link a.title:visited:not(.badge-notification), .anon .latest-topic-list-item .main-link a.title:visited:not(.badge-notification), .latest-topic-list-item .anon .main-link a.title:visited:not(.badge-notification) {
  color: $primary;
}
.subcategories {
  span.badge-category {
    color: $header_background;
  }
}

